--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
   "author": "tejas nasre",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
