--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 MONGODB_PASSWORD=aLAd7BbRQS9TPjUn
 MONGODB_URL=mongodb+srv://tejasnasre120:aLAd7BbRQS9TPjUn@todolist.mwudqsq.mongodb.net
 PORT=3000
+CORS_ORIGIN=https://todozen-lovat.vercel.app/
